Import model type from prisma
